--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@
     box-sizing: border-box;
     font-family: 'rubik';
 }
+button{
+    cursor: pointer;
+}
+ul li{
+    list-style: none;
+}
 .app__comment{
     background: var(--light-gray);
     max-width: 1440px;
@@ -26,46 +32,33 @@
     width: 50%;
     margin: 30px auto;
 }
-.comment__container{
+
+.comment__body-wrapper{
     background: var(--white);
     border-radius: 10px;
-    padding: 15px 20px;
+    padding: 10px 20px;
+    margin-bottom: 20px;
 
     display: flex;
     gap: 20px;
-    align-items: flex-start;
-    font-size: 16px;
 }
+
 .comment__upvote{
-    background: var(--light-gray);
-    padding: 5px 6px;
-    border-radius: 8px;
-
     display: flex;
-    gap: 10px;
+    gap: 20px;
     flex-direction: column;
-    align-items: center;
-}
-.comment__upvote-count,
-.comment__upvote-plus,
-.comment__upvote-minus{
-    font-size: 20px;
-    font-weight: 500;
-    color: var(--light-grayish-blue);
-    cursor: pointer;
-}
-.comment__upvote-count{
-    color: var(--moderate-blue);
-}
+    background-color: var(--light-gray);
 
-.comment__container-body_op{
+    padding: 2px 10px;
+    border-radius: 5px;
+}
+.comment__author{
     display: flex;
-    justify-content: space-between;
     align-items: center;
-
+    justify-content: space-between;
     margin-bottom: 10px;
 }
-.comment__container-body-op_profile{
+.comment__author-info{
     display: flex;
     align-items: center;
     gap: 20px;
@@ -73,31 +66,42 @@
 .pp__img{
     width: 30px;
 }
-.comment__name,
-.comment__time{
+.post-time{
+    font-weight: light;
+    color: var(--grayish-blue);
     font-size: 14px;
 }
-.comment__name{
-    font-weight: 700;
-    color: var(--dark-blue);
-}
-.comment__time{
-    font-weight: light;
-    margin-left: 10px;
-    color: var(--grayish-blue);
-}
-.comment__container-body-op_replyBtn{
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-.comment__container-body-op_replyBtn p{
-    color: var(--moderate-blue);
+.author-name{
     font-weight: 500;
-    font-size: 16px;
+    color: var(--dark-blue);
+    font-size: 15px;
 }
-.comment__container-body_data p{
-    line-height: 1.5;
-    font-size: 16px;
+.replyBtn{
+    cursor: pointer;
+}
+.replyBtn span{
+    color: var(--moderate-blue);
+}
+.reply__list{
+    margin-left: 100px;
+    position: relative;
+}
+.reply__list::before{
+    content: "";
+    position: absolute;
+    left: -60px;
+    top: 0;
+    bottom: 0;
+    width: 2px;
+    background-color: var(--dark-blue);
+}
+.reply{
+    background-color: var(--white);
+    border-radius: 10px;
+}
+.comment-data{
     color: var(--grayish-blue);
+    line-height: 1.7;
+    font-weight: light;
+    font-size: 16px;
 }
