--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ ul li{
 .app__comment{
     background: var(--light-gray);
     max-width: 1440px;
+    position: relative;
 }
 .app__comment-container{
     width: 50%;
@@ -75,33 +76,163 @@ ul li{
     font-weight: 500;
     color: var(--dark-blue);
     font-size: 15px;
+
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
-.replyBtn{
+.currentUser{
+    padding: 2px 6px;
+    background: var(--moderate-blue);
+    color: var(--white);
+    border-radius: 4px;
+    font-size: 13px;
+}
+.replyBtn button{
+    padding: 8px 20px;
     cursor: pointer;
+    border: none;
+    border-radius: 10px;
+    font-size: 14px;
+    font-weight: 500;
 }
 .replyBtn span{
     color: var(--moderate-blue);
 }
-.reply__list{
-    margin-left: 100px;
+.reply-btn{
+    display: flex;
+    gap: 8px;
+    align-items: center;
+}
+.nested-comments{
+    margin-left: 95px;
     position: relative;
 }
-.reply__list::before{
+.nested-comments::before{
     content: "";
     position: absolute;
     left: -60px;
     top: 0;
     bottom: 0;
-    width: 2px;
+    width: 1.5px;
     background-color: var(--dark-blue);
 }
 .reply{
     background-color: var(--white);
     border-radius: 10px;
 }
+.user-btn{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.user-btn span{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+
+    cursor: pointer;
+}
+.user-btn span:first-child{
+    color: var(--Soft-red);
+}
+.user-btn span:last-child{
+    color: var(--moderate-blue);
+}
 .comment-data{
     color: var(--grayish-blue);
     line-height: 1.7;
     font-weight: light;
     font-size: 16px;
+}
+.form-wrapper{
+    margin: 0 auto;
+    background: #fff;
+    padding: 10px 20px;
+    display: grid;
+    grid-template-columns: 1fr 8fr 1fr;
+    gap: 10px;
+    align-items: start;
+
+    border-radius: 12px;
+    margin-bottom: 12px;
+}
+.form-container{
+    display: flex;
+    align-items: start;
+    gap: 18px;
+
+    /* margin: 10px auto; */
+    /* padding: 10px 20px; */
+}
+.form{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 18px;
+}
+#form button{
+    background: var(--moderate-blue);
+    border: none;
+    padding: 7px 10px;
+    color: var(--white);
+    font-size: 15px;
+    font-weight: 600;
+    border-radius: 8px;
+}
+textarea{
+    outline: none;
+    padding: 10px 20px;
+    border: 1px solid var(--grayish-blue);
+}
+
+.plus, .minus{
+    cursor: pointer;
+}
+
+
+.popup{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.hidden{
+    display: none;
+}
+.block{
+    display: block;
+}
+.popup-wrapper{
+    width: 350px;
+    padding: 20px 10px;
+    background: var(--white);
+
+    border-radius: 10px;
+}
+.popup-wrapper p{
+    margin: 10px 0;
+    line-height: 1.5;
+}
+.popup-wrapper div{
+    display: flex;
+    gap: 30px;
+}
+.popup-wrapper div button{
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 10px;
+    color: var(--white);
+}
+.popup-wrapper div button:first-child{
+    background-color: var(--dark-blue);
+}
+.popup-wrapper div button:last-child{
+    background-color: var(--Soft-red);
 }
